--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <%= require('./head.tpl') %>
-    <title></title>
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>multipage </title>
+  </head>
+  <body>
     <div id="app"></div>
-    <%= require('./footer.tpl') %>
-</body>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
